Convert to Regex::new()
We were using compiled regular expressions for the performance boost and
because they're more convenient (they fail at compile time rather than
at runtime), but recent updates to the regex crate have caused ordinary
regular expressions to actually run faster than the compiled ones. So
that I can keep the same ergonomics, I'm now using a lazy static to
store the regex, since it's not otherwise possible to create a static
regular expression.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,6 @@ version = "1.2.0"
 authors = ["J/A <archer884@gmail.com>"]
 
 [dependencies]
+lazy_static = "*"
 rand = "*"
 regex = "*"
-regex_macros = "*"
